# logstreamer

./: Cargo.toml  README.md
src/: filter.rs  main.rs  metrics.rs  stream.rs  websocket.rs
